--- a/src/components/Meals/MealSummary/MealSummary.module.css
+++ b/src/components/Meals/MealSummary/MealSummary.module.css
@@ -5,11 +5,11 @@
   margin: auto;
   margin-top: -10rem;
   position: relative;
-  background-color: #eee;
+  background-color: #fff;
   color: #000;
   border-radius: 14px;
   padding: 1rem;
-  box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.09);
 }
 
 .summary h2 {
